<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterScreen">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:background="@drawable/icon"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:textStyle="bold"
            android:text="@string/Reg"
            android:textColor="@color/purple_200"
            android:textSize="36dp"></TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="499dp"
        android:background="@color/teal_200"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="49dp"
            android:text="@string/text"
            android:textSize="28dp"></TextView>

        <EditText
            android:id="@+id/Login"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="13dp"
            android:hint="@string/Log"
            android:textSize="28dp"></EditText>

        <EditText
            android:id="@+id/Pass"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="13dp"
            android:hint="@string/Pas"
            android:inputType="textPassword"
            android:textSize="28dp"></EditText>

        <Button
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="173dp"
            android:background="@drawable/button"
            android:text="@string/Ent"
            android:textColor="@color/white"
            android:textSize="28dp"
            android:onClick="Next2"></Button>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>