<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calc">

    <ImageButton
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/arrow"
        android:onClick="Back1"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginTop="100dp"
        android:text="@string/CalcS"
        android:textColor="@color/purple_200"
        android:textSize="36dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="519dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.171"
        android:orientation="vertical"
        android:background="@color/teal_200">


        <TextView
            android:id="@+id/res"
            android:background="@drawable/text"
            android:layout_width="350dp"
            android:layout_height="37dp"
            android:paddingLeft="15dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="35dp"
            android:textSize="28dp"
            />
        <Spinner
            android:paddingLeft="15dp"
            android:id="@+id/spinner"
            android:layout_width="339dp"
            android:layout_height="59dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/text"
            android:entries="@array/Rooms"
            />

        <EditText
            android:id="@+id/square"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="100dp"
            android:paddingLeft="15dp"
            android:layout_width="222dp"
            android:layout_height="62dp"
            android:background="@drawable/text"
            android:hint="@string/CountMet"
            android:textSize="28dp"/>

        <Button

            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button"
            android:onClick="Calculated"
            android:text="@string/Calc"
            android:textColor="@color/white"
            android:textSize="28dp" />

        <TextView
            android:id="@+id/Ans"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="100dp"
            android:paddingLeft="70dp"
            android:layout_width="222dp"
            android:layout_height="62dp"
            android:text="@string/Res"
            android:textStyle="bold"
            android:textSize="28dp"
            android:background="@drawable/text"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>